# bcrane_harvester_control

./: README.md  README.txt
matlab/: crane_model_v02_sim.slx  crane_model_v02_sim_improved.slx
src/crane_control_adaptive/: CMakeLists.txt  controller_plugin.xml  package.xml
src/crane_control_adaptive/config/: crane_control_adaptive.yaml
src/crane_control_adaptive/include/crane_control_adaptive/: ad_pid_hardware_interface.h  joint_trajectory_adaptive.h
src/crane_control_adaptive/launch/: crane_control_adaptive.launch
src/crane_control_adaptive/src/: crane_control_adaptive.cpp
src/crane_cs_sim/: CMakeLists.txt  package.xml
src/crane_cs_sim/launch/: crane_bringup.launch  crane_control.launch  sim_environment.launch
src/crane_cs_sim/scene/: camera_scene_publish.lua  chessboard_calib.ttm  crane_6dof_model.ttm  crane_model_v02_6obj.ttt  crane_model_v02_cs.ttt
src/crane_manager/: CMakeLists.txt  package.xml
src/crane_manager/include/crane_manager/: crane_manager.h
src/crane_manager/launch/: crane_manager.launch
src/crane_manager/src/: crane_manager.cpp
src/crane_model_v02/: CMakeLists.txt  package.xml
src/crane_model_v02/config/: crane_model_v02_params.yaml
src/crane_model_v02/include/crane_ik_equations/: crane_ik_equations.h
src/crane_model_v02/launch/: crane_ik_plugin.launch  crane_upload.launch  display.launch
src/crane_model_v02/msg/: ObjectIdentifier.msg  ObjectList.msg
src/crane_model_v02/src/: crane_ik_client_test.cpp  crane_ik_equations.cpp
src/crane_model_v02/srv/: SolvePositionInverse.srv
src/crane_model_v02/urdf/: crane_model_v02.urdf.xacro  crane_model_v02_export.urdf  crane_model_v02_params.xacro  crane_model_v02_transmission.xacro
src/crane_model_v02_crane_arm_serial_ikfast_plugin/: CMakeLists.txt  crane_model_v02_crane_arm_serial_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/crane_model_v02_crane_arm_serial_ikfast_plugin/src/: crane_model_v02_crane_arm_serial_ikfast_moveit_plugin.cpp  crane_model_v02_crane_arm_serial_ikfast_solver.cpp
src/crane_model_v02_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/crane_model_v02_moveit_config/config/: crane_model_v02.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/crane_model_v02_moveit_config/launch/: chomp_planning_pipeline.launch.xml  crane_model_v02_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/crane_vision/: CMakeLists.txt  package.xml  setup.py
src/crane_vision/launch/: crane_vision_detection.launch
src/crane_vision/src/: camera_projector.py  ekf_tracker.py  position_measured_moving.npy  position_measured_stat.npy  position_pred_moving.npy  position_pred_stat.npy  process.py  time_moving.npy  time_stat.npy  z_graph.py
src/crane_vision/src/moving-1/: position_measured_moving.npy  position_pred_moving.npy  time_moving.npy
src/crane_vision/src/moving-2/: position_measured_moving.npy  position_pred_moving.npy  time_moving.npy
src/crane_vision/src/moving-2a/: position_measured_moving.npy  position_pred_moving.npy  time_moving.npy
utils/: camera_calib.py  camera_loc.py
