<?xml version="1.0"?>
<package format="2">
  <name>crane_control_adaptive</name>
  <version>0.0.0</version>
  <description>Adaptive controller for 3-link hydraulic boom crane - joint error exponential function tuning method</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jjmoey@gmail.com">Junji Moey/z5112826</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>joint_trajectory_controller</depend>

  <build_depend>angles</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <build_export_depend>angles</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>
</package>
