<?xml version="1.0"?>
<package format="2">
  <name>crane_vision</name>
  <version>0.0.0</version>
  <description>The crane_vision package</description>

  <maintainer email="jjmoey@gmail.com">jjmoey</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>dynamic_reconfigure</depend> -->

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>python-lxml</exec_depend>


  <export>

  </export>
</package>
